<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kalkulator_wysiewu"
    android:background="@drawable/tlo">

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/wysiew"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/pink"
                android:ems="10"
                android:hint="ziaren/m2"
                android:inputType="number"
                android:maxLength="5"
                android:textColor="@color/white"
                android:textColorHighlight="@color/pink"
                android:textColorHint="@color/white"
                android:textColorLink="@color/pink" />

            <TextView
                android:id="@+id/wysiewText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/wysiew"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/masa"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/pink"
                android:ems="10"
                android:hint="g"
                android:inputType="numberDecimal"
                android:maxLength="6"
                android:textColor="@color/white"
                android:textColorHighlight="@color/pink"
                android:textColorHint="@color/white"
                android:textColorLink="@color/pink" />

            <TextView
                android:id="@+id/masaText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/masa"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/powierzchnia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/pink"
                android:ems="10"
                android:hint="ha"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:textColor="@color/white"
                android:textColorHighlight="@color/pink"
                android:textColorHint="@color/white"
                android:textColorLink="@color/pink" />

            <TextView
                android:id="@+id/powierzchniaText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/powierzchnia"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/cena"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/pink"
                android:ems="10"
                android:hint="zł/kg"
                android:inputType="numberDecimal"
                android:maxLength="6"
                android:textColor="@color/white"
                android:textColorHighlight="@color/pink"
                android:textColorHint="@color/white"
                android:textColorLink="@color/pink" />

            <TextView
                android:id="@+id/cenaText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:text="@string/cena"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/kielkowanie"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.8"
                android:max="100"
                android:progress="1"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/white"
                android:scrollbarThumbVertical="@color/white"
                android:thumbTint="@color/pink" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/kielkowanie2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/kielkowanieText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/kielkowanie"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/kalkuluj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kalkuluj" />

        <TextView
            android:id="@+id/wynik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginLeft="9dp"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="9dp"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>